fixing alignment

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -54,6 +54,7 @@ a {
   flex-flow: column;
   justify-content: center;
   height: 100%;
+  width: 100vw;
 }
 
 .h1 { 
